@@ -1,6 +1,6 @@
 #!<SHELL>
 #
-# $Id: send-fidogate.in,v 1.2 2004/06/07 19:58:06 rusfidogate Exp $
+# $Id: send-fidogate.in,v 1.3 2004/07/12 18:28:01 anray Exp $
 #
 # SH script to send batches to FIDOGATE
 #
@@ -10,7 +10,6 @@ FIDOGATE_LOGFILE="%G/log-news"
 export FIDOGATE_LOGFILE
 
 eval `<NEWSBINDIR>/innconfval -s`
-eval `<LIBEXECDIR>/confval`
 
 RFC2FTN=<SEND_RFC2FTN>
 PROGNAME=`basename $0`
